--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-python3-adns (1.2.2~alpha1.2-0ubuntu1) yakkety; urgency=medium
+python3-adns (1.2.2-1ubuntu1) yakkety; urgency=medium
 
   * New upstream version for Python 3.
   * debian/control: Updated for Python 3 sources.
   * debian/copyright: Updated for Python 3 sources.
 
- -- Thomas Dreibholz <dreibh@iem.uni-due.de>  Sun, 01 May 2016 08:08:08 +0800
+ -- Thomas Dreibholz <dreibh@iem.uni-due.de>  Wed, 29 Jun 2016 08:08:08 +0800
 
 python-adns (1.2.1-5build3) trusty; urgency=medium
 
