--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+python3-adns (1.2.6-1ubuntu1) cosmic; urgency=medium
+
+  * New upstream version.
+  * debian/control: dependency fix; updated standards version.
+
+ -- Thomas Dreibholz <dreibh@iem.uni-due.de>  Thu, 13 Dec 2018 08:08:08 +0800
+
 python3-adns (1.2.5-1ubuntu1) cosmic; urgency=medium
 
   * New upstream version.
