--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-python3-adns (1.2.8~rc3-1ubuntu1) unstable; urgency=medium
+python3-adns (1.2.8~rc3-1ubuntu1) hirsute; urgency=medium
 
   * New upstream version.
   * debian/control: dependency fix; updated standards version.
