--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python3-adns (1.2.8~rc4-1ubuntu1) jammy; urgency=medium
+
+  * New upstream version.
+
+ -- Thomas Dreibholz <dreibh@iem.uni-due.de>  Wed, 16 Feb 2022 08:08:08 +0800
+
 python3-adns (1.2.8~rc3-1ubuntu1) hirsute; urgency=medium
 
   * New upstream version.
